# rule-of-5-cpp

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
